--- a/index.html
+++ b/index.html
@@ -9,4 +9,5 @@
 <body>
     <script>Extension_Live_Share_08_02_2021</script>
 </body>
+<h1>Favor ver  consola del navegador, u oprimir tecla F12, para ver los resultados</h1>
 </html>
